# codd-dev

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_ja.md  README_zh.md  RUNBOOK.md  action.yml  pyproject.toml
.codd/: .gitignore  codd.yaml  dag.json  reconciliation_ledger.json
.github/: FUNDING.yml
.github/workflows/: codd-audit.yml  codd_coverage.yml  dogfood.yml  publish.yml  test.yml
bench_fixture/: README.md
codd/: __init__.py  __main__.py  _git_helper.py  action_outcome.py  ai_invoke.py  ai_patch.py  artifact_contract.py  artifact_ids.py  ask_user_question_adapter.py  assembler.py  audit.py  bridge.py  capability_completeness.py  claude_cli.py  cli.py  clustering.py  coherence_adapters.py  coherence_engine.py  confidence.py  config.py  config_schema.py  contracts.py  coverage_auditor.py  coverage_e2e_selection.py  coverage_execution_coherence.py  coverage_metrics.py  coverage_obligation_extractor.py  coverage_obligations.py  defaults.py  defaults.yaml  dependency_boundary_coherence.py  dependency_catalog.py  dependency_lock_coherence.py  deployer.py  design_md.py  discovery.py  drift.py  e2e_contract_coherence.py  e2e_extractor.py  e2e_generator.py  (+67 more)
codd/artifacts/: catalog.yaml
codd/brownfield/: __init__.py  pipeline.py
codd/contracts_registry/: __init__.py  __main__.py  certify.py  generate_matrix.py  registry.py
codd/dag/: __init__.py  auto_repair.py  builder.py  coverage_axes.py  extractor.py  impact.py  materiality.py  metadata_access.py  result_status.py  runner.py
codd/deploy_targets/: __init__.py  app_service.py  base.py  docker_compose.py
codd/deployment/: __init__.py  extractor.py
codd/diff/: __init__.py  apply.py  engine.py  persistence.py
codd/drift_linkers/: __init__.py  api.py  schema.py  screen_flow.py
codd/elicit/: __init__.py  apply.py  engine.py  finding.py  gap_to_ask.py  lexicon_loader.py  persistence.py  promote.py  routing.py
codd/fix/: __init__.py  candidate_selector.py  design_updater.py  impact_planner.py  impl_propagation.py  interactive_prompt.py  phenomenon_fixer.py  phenomenon_parser.py  risk_classifier.py  templates_loader.py
codd/fixup_drift_strategies/: __init__.py  design_token_drift.py  lexicon_violation.py  url_drift.py
codd/greenfield/: __init__.py  pipeline.py  test_rederivation.py
codd/hooks/: __init__.py  pre-commit
codd/implementer/: __init__.py  chunked_runner.py  typecheck_loop.py
codd/init/: __init__.py  lexicon_suggest.py  llm_lexicon_suggester.py  stack_detector.py
codd/languages/: __init__.py  builtin_adapters.py  compat.py  contract.py  loader.py  oracle_executor.py  path_planner.py  profile.py  registry.py  verify_executor.py  verify_plan.py
codd/lexicon_cli/: __init__.py  inspector.py  manager.py  reporter.py  threshold.py
codd/llm/: approval.py  best_practice_augmenter.py  criteria_expander.py  design_doc_extractor.py  impl_step_deriver.py  means_catalog_loader.py  parser.py  plan_deriver.py  prompt_builder.py  strategy_validator.py
codd/parsing/: __init__.py  iac.py  (+9 more)
codd_plugins/: stack_map.yaml
docs/: claude-code-setup.md  claude-code-setup_ja.md  explainer.en.md  explainer.md  explainer.zh.md  positioning.md
dogfood/: README.md  conftest.py  contract_matrix.yaml  ledger.yaml  run_iteration.py  zoo.yaml
examples/: README.md  greenfield_autopilot.sh
quality/: brownfield_discovery_hardening.md  false_green_decision_memos.md  false_green_matrix.md  false_green_vectors.yaml  quality_max_loop_ledger.md  self_hosting_ledger.md  stage2_axisp_readiness_plan.md
reports/: cmd_360_readme_update.md  cmd_368_codd_crud_flow_verification.md  cmd_479_codd_action_outcome_coverage.md  cmd_482_codd_skills_frontmatter_issue25.md  cmd_483_codd_skills_necessity_audit.md  cmd_488_codd_ui_outcome_navigation.md  cmd_489_global_action_responsive_coverage.md  cmd_494_coverage_obligation_first_slice.md  cmd_495_e2e_candidate_selection.md
scripts/: bench_app_server.py  bench_app_server_direct.py  cmd_364_results.jsonl  format_pr_comment.py  runbook.md
templates/: codd.yaml.tmpl  conventions.yaml.tmpl  doc_links.yaml.tmpl  gitignore.tmpl
tests/: stage2_axisp_corpus_loader.py  test_acg_owner_uniqueness.py  test_action.py  test_action_outcome.py  test_ai_command_factory.py  test_ai_governance_eu_act_axes_coverage.py  test_ai_governance_eu_act_loadable.py  test_ai_invoke.py  test_api_contract_proto_enum_render.py  test_api_extractor.py  test_api_rest_openapi_axes_coverage.py  test_api_rest_openapi_loadable.py  test_app_service_target.py  test_artifact_contract.py  test_artifact_ids.py  test_ask_user_question_adapter.py  test_assembler.py  test_assembler_path_jail.py  test_audit.py  test_audit_layer_path_jail.py  test_authorization_reachability.py  test_axes_coverage.py  test_backend_event_cloudevents_axes_coverage.py  test_backend_event_cloudevents_loadable.py  test_backend_graphql_axes_coverage.py  test_backend_graphql_loadable.py  test_backend_grpc_proto_axes_coverage.py  test_backend_grpc_proto_loadable.py  test_bench_app_server.py  test_bridge.py  test_bridge_plugin_system_intact.py  test_brownfield_js_dogfood.py  test_call_graph.py  test_capability_aware_generation.py  test_capability_completeness.py  test_cdap_hooks.py  test_cdap_propagate_from.py  test_cdap_related_test.py  test_cdap_scaffold.py  test_cdap_watch.py  (+289 more)
(+792 files in other folders)
